[gd_scene load_steps=7 format=3 uid="uid://ct15sak82m0y0"]

[ext_resource type="Script" uid="uid://8wyhklto22ik" path="res://scenes/dashboard/project_list/project_list.gd" id="1_j7fao"]
[ext_resource type="Texture2D" uid="uid://b8jqckm12c1eb" path="res://meta/icons/add.svg" id="2_j7fao"]
[ext_resource type="Texture2D" uid="uid://bqfagmo47lo4o" path="res://meta/icons/dir.svg" id="3_e6idx"]
[ext_resource type="Shader" uid="uid://c8srm6epgj1mo" path="res://components/shader/blur.gdshader" id="5_e6idx"]
[ext_resource type="PackedScene" uid="uid://dsj577bhb635s" path="res://scenes/dashboard/project_list/new_project/new_project.tscn" id="5_i1b5s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i1b5s"]
shader = ExtResource("5_e6idx")
shader_parameter/blur_amount = 2.50000011875
shader_parameter/blur_quality = 4
shader_parameter/dither_strength = 0.1

[node name="ProjectList" type="Panel" node_paths=PackedStringArray("no_projects", "projects", "project_count_label", "project_list_vbox", "blur_overlay", "new_project_handler", "new_project_window", "loading_window", "remove_project_window", "delete_contents_checkbox", "import_project_dialog")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j7fao")
no_projects = NodePath("NoProjects")
projects = NodePath("ProjectList")
project_count_label = NodePath("ProjectList/MarginContainer/VBoxContainer/HBoxContainer/ProjectNumLabel")
project_list_vbox = NodePath("ProjectList/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/ProjectListVBox")
blur_overlay = NodePath("BlurOverlay")
new_project_handler = NodePath("NewProjectWindow/NewProject")
new_project_window = NodePath("NewProjectWindow")
loading_window = NodePath("LoadingWindow")
remove_project_window = NodePath("RemoveProjectWindow")
delete_contents_checkbox = NodePath("RemoveProjectWindow/PanelContainer/MarginContainer/VBoxContainer/CheckBox")
import_project_dialog = NodePath("ImportProjectDialog")
metadata/_edit_lock_ = true

[node name="NoProjects" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="NoProjectsLabel" type="Label" parent="NoProjects"]
modulate = Color(1, 1, 1, 0.18431373)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -60.0
offset_right = 219.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"nLabelPrimary"
theme_override_font_sizes/font_size = 22
text = "Looks like you don't have any projects set up,
either CREATE or IMPORT a project."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NoProjects"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = 21.0
offset_right = 184.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="CreateButton" type="Button" parent="NoProjects/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"nButtonPrimary"
text = "Create"
icon = ExtResource("2_j7fao")

[node name="ImportButton" type="Button" parent="NoProjects/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"nButtonSecondary"
theme_override_constants/icon_max_width = 18
text = "Import"
icon = ExtResource("3_e6idx")

[node name="ProjectList" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="ProjectList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ProjectList/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ProjectList/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 15

[node name="ProjectNumLabel" type="Label" parent="ProjectList/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Projects - 0"

[node name="Control" type="Control" parent="ProjectList/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="CreateButton" type="Button" parent="ProjectList/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_type_variation = &"nButtonPrimary"
text = "Create"

[node name="ImportButton" type="Button" parent="ProjectList/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_type_variation = &"nButtonSecondary"
text = "Import"

[node name="ScrollContainer" type="ScrollContainer" parent="ProjectList/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ProjectList/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 8

[node name="ProjectListVBox" type="VBoxContainer" parent="ProjectList/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="BlurOverlay" type="ColorRect" parent="."]
visible = false
top_level = true
material = SubResource("ShaderMaterial_i1b5s")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImportProjectDialog" type="FileDialog" parent="."]
auto_translate_mode = 2
oversampling_override = 1.0
title = "Open a File"
initial_position = 2
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.nproj;Nebula Project File")
use_native_dialog = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="NewProjectWindow" type="NebulaWindow" parent="."]
title_text = "Create a New Project"
title_margin = 8
border_margin = 0
visible = false
layout_mode = 0
offset_right = 550.0
offset_bottom = 465.0

[node name="NewProject" parent="NewProjectWindow" instance=ExtResource("5_i1b5s")]
layout_mode = 2

[node name="LoadingWindow" type="NebulaWindow" parent="."]
title_text = "Creating Project"
close_on_escape = false
visible = false
top_level = true
layout_mode = 0
offset_right = 10.0
offset_bottom = 11.0

[node name="ProgressBar" type="ProgressBar" parent="LoadingWindow"]
custom_minimum_size = Vector2(600, 40)
layout_mode = 2
show_percentage = false
indeterminate = true
editor_preview_indeterminate = true

[node name="RemoveProjectWindow" type="NebulaWindow" parent="."]
title_text = "Remove Project"
title_margin = 8
border_margin = 0
visible = false
layout_mode = 0
offset_right = 470.0
offset_bottom = 167.0

[node name="PanelContainer" type="PanelContainer" parent="RemoveProjectWindow"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="RemoveProjectWindow/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="RemoveProjectWindow/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="RemoveProjectWindow/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label" type="Label" parent="RemoveProjectWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"nLabelThin"
theme_override_font_sizes/font_size = 18
text = "Are you sure you want to remove this project?"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="RemoveProjectWindow/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="RemoveProjectWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 15
text = "Delete Project Files"

[node name="Control3" type="Control" parent="RemoveProjectWindow/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="RemoveProjectWindow/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="CancelButton" type="Button" parent="RemoveProjectWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Cancel"

[node name="RemoveButton" type="Button" parent="RemoveProjectWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"nButtonDanger"
text = "Remove"

[connection signal="pressed" from="NoProjects/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="NoProjects/HBoxContainer/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="pressed" from="ProjectList/MarginContainer/VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="ProjectList/MarginContainer/VBoxContainer/HBoxContainer/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="file_selected" from="ImportProjectDialog" to="." method="_on_import_project_dialog_file_selected"]
[connection signal="hide_request" from="NewProjectWindow" to="." method="_on_nebula_window_hide_request"]
[connection signal="cancel_pressed" from="NewProjectWindow/NewProject" to="." method="_on_new_project_cancel_pressed"]
[connection signal="create_request" from="NewProjectWindow/NewProject" to="." method="_on_new_project_create_request"]
[connection signal="switch_to_module_request" from="NewProjectWindow/NewProject" to="." method="_on_new_project_switch_to_module_request"]
[connection signal="hide_request" from="RemoveProjectWindow" to="." method="_on_remove_project_window_hide_request"]
[connection signal="pressed" from="RemoveProjectWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_remove_project_cancel_button_pressed"]
[connection signal="pressed" from="RemoveProjectWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RemoveButton" to="." method="_on_remove_project_remove_button_pressed"]
